--- a/groceries.html
+++ b/groceries.html
@@ -1,9 +1,22 @@
 <html>
     <head>
         <meta charset="utf-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <script src="https://unpkg.com/alpinejs@3.x.x/dist/cdn.min.js"></script>
         <script src="https://cdn.tailwindcss.com"></script>
         <title>Shopping List App</title>
+        <style>
+            @media (max-width: 768px) {
+                input,
+                button {
+                    min-height: 44px;
+                }
+                .recipe-action {
+                    padding: 3px;
+                    margin: -3px;
+                }
+            }
+        </style>
     </head>
     <body>
         <div
@@ -179,56 +192,51 @@
 }"
         >
             <div class="container mx-auto p-4">
-                <div class="flex mb-4">
+                <div class="flex mb-4 w-full">
                     <button
                         @click="activeTab = 'recipes'; window.history.pushState({}, '', '?tab=recipes')"
-                        :class="{'bg-blue-500': activeTab === 'recipes', 'bg-gray-200': activeTab !== 'recipes'}"
-                        class="px-4 py-2 rounded-l"
+                        :class="{'bg-blue-500 text-white': activeTab === 'recipes', 'bg-gray-200': activeTab !== 'recipes'}"
+                        class="flex-1 px-4 py-3 text-sm md:text-base rounded-l font-medium"
                     >
                         Recipes
                     </button>
                     <button
                         @click="activeTab = 'shopping'; window.history.pushState({}, '', '?tab=shopping')"
-                        :class="{'bg-blue-500': activeTab === 'shopping', 'bg-gray-200': activeTab !== 'shopping'}"
-                        class="px-4 py-2 rounded-r"
+                        :class="{'bg-blue-500 text-white': activeTab === 'shopping', 'bg-gray-200': activeTab !== 'shopping'}"
+                        class="flex-1 px-4 py-3 text-sm md:text-base rounded-r font-medium"
                     >
                         Shopping List
                     </button>
                 </div>
 
                 <div x-show="activeTab === 'recipes'" class="relative">
-                    <button
-                        @click="isEditing = true; editingRecipe = null"
-                        class="bg-green-500 text-white px-4 py-2 rounded mb-4"
-                    >
-                        New Recipe
-                    </button>
-
                     <template x-if="isEditing">
                         <div
-                            class="fixed inset-0 bg-black bg-opacity-50 flex items-center justify-center"
+                            class="fixed inset-0 bg-black bg-opacity-50 flex items-center justify-center p-4"
                             style="z-index: 1000"
                         >
-                            <div class="bg-white p-4 rounded">
+                            <div class="bg-white p-4 rounded w-full max-w-md">
                                 <input
                                     x-model="newRecipe.name"
                                     type="text"
                                     placeholder="Recipe Name"
-                                    class="border p-2 mb-2 w-full"
+                                    class="border p-3 md:p-2 mb-2 w-full text-sm md:text-base"
                                 />
                                 <div class="mb-2 relative">
-                                    <div class="flex gap-2">
+                                    <div
+                                        class="flex flex-col md:flex-row gap-2"
+                                    >
                                         <input
                                             x-model="newIngredient"
                                             @input="updateSuggestions"
                                             @keyup.enter="addIngredient"
                                             type="text"
                                             placeholder="Add ingredient"
-                                            class="border p-2 flex-grow"
+                                            class="border p-3 md:p-2 flex-grow text-sm md:text-base"
                                         />
                                         <button
                                             @click="addIngredient"
-                                            class="bg-blue-500 text-white px-4 py-2 rounded"
+                                            class="bg-blue-500 text-white px-4 py-3 md:py-2 rounded text-sm md:text-base"
                                         >
                                             Add
                                         </button>
@@ -243,7 +251,7 @@
                                         >
                                             <div
                                                 @click="selectSuggestion(suggestion)"
-                                                class="p-2 hover:bg-gray-100 cursor-pointer"
+                                                class="p-3 md:p-2 hover:bg-gray-100 cursor-pointer text-sm md:text-base"
                                                 x-text="suggestion"
                                             ></div>
                                         </template>
@@ -254,14 +262,15 @@
                                             :key="index"
                                         >
                                             <div
-                                                class="flex items-center gap-2 p-1"
+                                                class="flex items-center gap-2 p-0"
                                             >
                                                 <span
                                                     x-text="ingredient"
+                                                    class="text-sm md:text-base"
                                                 ></span>
                                                 <button
                                                     @click="newRecipe.ingredients.splice(index, 1)"
-                                                    class="text-red-500"
+                                                    class="text-red-500 text-xl p-2"
                                                 >
                                                     ×
                                                 </button>
@@ -269,16 +278,16 @@
                                         </template>
                                     </div>
                                 </div>
-                                <div>
+                                <div class="flex flex-col md:flex-row gap-2">
                                     <button
                                         @click="saveRecipe()"
-                                        class="bg-green-500 text-white px-4 py-2 rounded"
+                                        class="bg-green-500 text-white px-4 py-3 md:py-2 rounded text-sm md:text-base"
                                     >
                                         Save
                                     </button>
                                     <button
                                         @click="isEditing = false; editingRecipe = null"
-                                        class="bg-red-500 text-white px-4 py-2 rounded"
+                                        class="bg-red-500 text-white px-4 py-3 md:py-2 rounded text-sm md:text-base"
                                     >
                                         Cancel
                                     </button>
@@ -287,9 +296,11 @@
                         </div>
                     </template>
 
-                    <div class="grid grid-cols-1 md:grid-cols-2 gap-4">
+                    <div class="grid grid-cols-1 lg:grid-cols-2 gap-4">
                         <div>
-                            <h2 class="font-bold mb-2">Planned Recipes</h2>
+                            <h2 class="font-bold mb-2 text-lg">
+                                Planned Recipes
+                            </h2>
                             <div class="space-y-2">
                                 <template
                                     x-for="recipe in recipes.filter(r => r.active)"
@@ -297,12 +308,15 @@
                                 >
                                     <div
                                         @click="toggleRecipeActive(recipe, $event)"
-                                        class="p-2 border rounded cursor-pointer hover:bg-gray-50 relative"
+                                        class="p-3 md:p-2 border rounded cursor-pointer hover:bg-gray-50 relative"
                                     >
-                                        <span x-text="recipe.name"></span>
+                                        <span
+                                            x-text="recipe.name"
+                                            class="text-sm md:text-base"
+                                        ></span>
                                         <button
                                             @click="editRecipe(recipe)"
-                                            class="recipe-action absolute right-8 top-2 text-gray-500 hover:text-gray-700"
+                                            class="recipe-action absolute right-8 top-3 md:top-2 text-gray-500 hover:text-gray-700 text-xl"
                                         >
                                             ✎
                                         </button>
@@ -323,7 +337,15 @@
                         </div>
 
                         <div>
-                            <h2 class="font-bold mb-2">Recipe Box</h2>
+                            <div class="flex items-center justify-between mb-4">
+                                <h2 class="font-bold text-lg">Recipe Box</h2>
+                                <button
+                                    @click="isEditing = true; editingRecipe = null"
+                                    class="bg-green-500 text-white px-3 py-1 rounded text-sm"
+                                >
+                                    New Recipe
+                                </button>
+                            </div>
                             <div class="space-y-2">
                                 <template
                                     x-for="recipe in recipes.filter(r => !r.active)"
@@ -331,18 +353,21 @@
                                 >
                                     <div
                                         @click="toggleRecipeActive(recipe, $event)"
-                                        class="p-2 border rounded cursor-pointer bg-gray-100 hover:bg-gray-200 relative"
+                                        class="p-3 md:p-2 border rounded cursor-pointer bg-gray-100 hover:bg-gray-200 relative"
                                     >
-                                        <span x-text="recipe.name"></span>
+                                        <span
+                                            x-text="recipe.name"
+                                            class="text-sm md:text-base"
+                                        ></span>
                                         <button
                                             @click="editRecipe(recipe)"
-                                            class="recipe-action absolute right-8 top-2 text-gray-500 hover:text-gray-700"
+                                            class="recipe-action absolute right-8 top-3 md:top-2 text-gray-500 hover:text-gray-700 text-xl"
                                         >
                                             ✎
                                         </button>
                                         <button
                                             @click="deleteRecipe(recipe)"
-                                            class="recipe-action absolute right-2 top-2 text-red-500 hover:text-red-700"
+                                            class="recipe-action absolute right-2 top-3 md:top-2 text-red-500 hover:text-red-700 text-xl"
                                         >
                                             ×
                                         </button>
@@ -365,21 +390,23 @@
                 </div>
 
                 <div x-show="activeTab === 'shopping'">
-                    <div class="grid grid-cols-1 md:grid-cols-2 gap-4">
+                    <div class="grid grid-cols-1 lg:grid-cols-2 gap-4">
                         <div>
-                            <h2 class="font-bold mb-2">Need</h2>
-                            <div class="flex gap-2 mb-4 relative">
+                            <h2 class="font-bold mb-2 text-lg">Need</h2>
+                            <div
+                                class="flex flex-col md:flex-row gap-2 mb-4 relative"
+                            >
                                 <input
                                     x-model="shoppingListInput"
                                     @input="updateShoppingListSuggestions"
                                     @keyup.enter="addShoppingListItem"
                                     type="text"
                                     placeholder="Add item to shopping list"
-                                    class="border p-2 flex-grow"
+                                    class="border p-3 md:p-2 flex-grow text-sm md:text-base"
                                 />
                                 <button
                                     @click="addShoppingListItem"
-                                    class="bg-blue-500 text-white px-4 py-2 rounded"
+                                    class="bg-blue-500 text-white px-4 py-3 md:py-2 rounded text-sm md:text-base"
                                 >
                                     Add
                                 </button>
@@ -393,7 +420,7 @@
                                     >
                                         <div
                                             @click="selectShoppingListSuggestion(suggestion)"
-                                            class="p-2 hover:bg-gray-100 cursor-pointer"
+                                            class="p-3 md:p-2 hover:bg-gray-100 cursor-pointer text-sm md:text-base"
                                             x-text="suggestion"
                                         ></div>
                                     </template>
@@ -406,11 +433,14 @@
                                 >
                                     <div
                                         @click="ingredient.needed = !ingredient.needed; haveIngredients.add(ingredient.name); updateIngredients()"
-                                        class="p-2 border rounded cursor-pointer bg-red-100 hover:bg-red-200"
+                                        class="p-3 md:p-2 border rounded cursor-pointer bg-red-100 hover:bg-red-200"
                                     >
-                                        <span x-text="ingredient.name"></span>
                                         <span
-                                            class="text-gray-400 text-sm"
+                                            x-text="ingredient.name"
+                                            class="text-sm md:text-base"
+                                        ></span>
+                                        <span
+                                            class="text-gray-400 text-xs md:text-sm"
                                             x-text="'(' + ingredient.recipes.join(', ') + ')'"
                                         ></span>
                                     </div>
@@ -419,29 +449,32 @@
                         </div>
 
                         <div>
-                            <h2 class="font-bold mb-2">Have</h2>
+                            <h2 class="font-bold mb-2 text-lg">Have</h2>
                             <div class="space-y-2">
                                 <template
                                     x-for="ingredient in ingredients.filter(i => !i.needed)"
                                     :key="ingredient.name"
                                 >
-                                    <div class="p-2 border rounded relative">
+                                    <div
+                                        class="p-3 md:p-2 border rounded relative"
+                                    >
                                         <div
                                             @click="ingredient.needed = !ingredient.needed; haveIngredients.delete(ingredient.name); updateIngredients()"
                                             class="cursor-pointer hover:bg-gray-50"
                                         >
                                             <span
                                                 x-text="ingredient.name"
+                                                class="text-sm md:text-base"
                                             ></span>
                                             <span
-                                                class="text-gray-400 text-sm"
+                                                class="text-gray-400 text-xs md:text-sm"
                                                 x-text="'(' + ingredient.recipes.join(', ') + ')'"
                                             ></span>
                                         </div>
                                         <button
                                             x-show="ingredient.recipes.includes('Manual Add')"
                                             @click="deleteManualItem(ingredient)"
-                                            class="absolute right-2 top-2 text-red-500 hover:text-red-700"
+                                            class="absolute right-2 top-3 md:top-2 text-red-500 hover:text-red-700 text-xl"
                                         >
                                             ×
                                         </button>
